# plane

./: .clang-format  .clang-tidy  .clangd  .env.default  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  conanfile.py  conanfile.txt  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vcpkg-configuration.json  vcpkg.json  webpack.config.js
configs/cmake/: license.cmake  pack.cmake  utils.cmake
configs/iwyu/: mapping.imp
configs/profiles/: linux  wasm  x64-linux-deb  x64-linux-rel
models/: box.glb  bullet.glb  center-block.glb  particle.glb  plane.glb  saucer.glb  sphere.glb  water-surface.glb
models/src/: box.blend  bullet.blend  center-block.blend  particle.blend  plane.blend  saucer.blend  sphere.blend  water-surface.blend
scripts/: install-tools.sh
shaders/: deferred_geometry_pass_f.glsl  deferred_light_pass_f.glsl  deferred_light_pass_v.glsl  main_f.glsl  main_v.glsl  output_v.glsl  particle_f.glsl  water_v.glsl
src/: app.cpp  app.h  cache.cpp  cache.h  camera.cpp  camera.h  common_handlers.cpp  common_handlers.cppm  common_handlers.h  components.h  consts.cppm  consts.h  control.cpp  control.cppm  control.h  directional_light.cpp  directional_light.h  game_loop.cpp  game_loop.cppm  game_loop.h  graphic.cpp  graphic.h  main.cpp  material.cpp  material.h  materials.cppm  mesh.cpp  mesh.cppm  mesh.h  mesh_generators.cppm  meshes.cppm  model.cpp  model.h  models.h  scene.cpp  scene.h  sdl_init.cpp  sdl_init.cppm  sdl_init.h  service.cppm  (+17 more)
src/app/: app.cpp  app.cppm  app.h  app_builder.cpp  app_builder.h  app_info.cppm  app_info.h  save.cpp  save.cppm  save.h  settings.cpp  settings.cppm  settings.h  system.h
src/cache/: cache.cpp  cache.cppm  cache.h
src/cameras/: camera.cpp  camera.cppm  camera.h  camera.tests.cpp  gui_camera.cpp  gui_camera.cppm  gui_camera.h  ortho_camera.cpp  ortho_camera.cppm  ortho_camera.h  perspective_camera.cpp  perspective_camera.cppm  perspective_camera.h  perspective_camera.tests.cpp
src/collections/: octree.cppm  octree.h  octree.tests.cpp
src/components/: common.cppm  common.h  linear_velocity.cpp  linear_velocity.h  percent.cpp  percent.cppm  percent.h  textures.cpp  textures.h  transform.cpp  transform.cppm  transform.h  turret_rotation.cpp  turret_rotation.cppm  turret_rotation.h  velocity.cpp  velocity.h  weapon.cppm  weapon.h
src/events/: event.cppm  event.h  event_emitter.cppm  event_emitter.h
src/fileio/: level_loader.cpp  level_loader.cppm  level_loader.h  levels_meta_loader.cpp  levels_order_loader.cpp  levels_order_loader.cppm  levels_order_loader.h  save_data_io.cpp  save_data_io.cppm  save_data_io.h  settings_io.cpp  settings_io.cppm  settings_io.h  theme_loader.cpp  theme_loader.cppm  translation_loader.cpp  translation_loader.cppm  translation_loader.h
src/game_state/: enemy_state.h  factory.cpp  factory.cppm  factory.h  game_state.cpp  game_state.h  handlers.cpp  handlers.h  index.h  particle_emitter.cpp  particle_emitter.h  projectile.cpp  projectile.h  state.cpp  state.cppm  state.h  texture_type.cpp  texture_type.h
src/gui/: credits_screen_factory.cpp  credits_screen_factory.cppm  credits_screen_factory.h  font.cpp  font.h  game_screen_factory.cpp  game_screen_factory.cppm  game_screen_factory.h  hostiles.cpp  hostiles.h  in_game_main_menu_factory.cpp  in_game_main_menu_factory.cppm  in_game_main_menu_factory.h  loading_factory.cpp  loading_factory.cppm  loading_factory.h  loading_screen.cpp  loading_screen.h  lose_menu_factory.cpp  lose_menu_factory.cppm  lose_menu_factory.h  main_menu_factory.cpp  main_menu_factory.cppm  main_menu_factory.h  settings_screen_factory.cpp  settings_screen_factory.cppm  settings_screen_factory.h  text.cpp  text.h  theme.h  types.h  ui_canvas.cpp  ui_canvas.cppm  ui_canvas.h
src/handlers/: index.cpp  index.h
src/lights/: directional_light.cpp  directional_light.h  index.h  point_light.cpp  point_light.h
src/loader/: index.h  level_loader.cpp  level_loader.h  levels_meta_loader.cpp  levels_meta_loader.h  params.h  theme_loader.cpp  theme_loader.h
src/logger/: abstract_logger.cppm  abstract_logger.h  console_logger.cppm  index.h  logger.cpp  logger.h
src/math/: intersection.cpp  intersection.h  intersection.tests.cpp  intersections.cppm  shapes.cppm  shapes.h
src/models/: cache.cpp  cache.h  enemy_state.h  factory.cpp  factory.h  graphic.cpp  graphic.h  index.h  model.cpp  model.h
src/scene/: iscene.cppm  scene.cpp  scene.cppm  scene.h
src/services/: app.cppm  cache.cppm  events.cppm  gui_quad.cppm  logger.cppm  logger.h  theme.cppm
src/shading/: deferred_shading.cpp  deferred_shading.cppm  deferred_shading.h  framebuffer.cpp  framebuffer.cppm  framebuffer.h  g_buffer.cpp  g_buffer.cppm  g_buffer.h  index.h
src/sound/: sound.cpp  sound.h
src/sounds/: sound.cppm  sound_buffer.cppm  sound_device.cppm  sound_listener.cppm  sound_source.cppm  utils.cppm
src/systems/: calculate_world_bbox.cpp  calculate_world_bbox.h  camera.cpp  camera.cppm  camera.h  collision.cpp  collision.cppm  collision.h  cursor.cpp  cursor.cppm  cursor.h  debris.cpp  debris.cppm  debris.h  enemy.cpp  enemy.cppm  enemy.h  entities_collector.cpp  entities_collector.cppm  entities_collector.h  finish_condition.cpp  finish_condition.cppm  finish_condition.h  gun.cpp  gun.cppm  gun.h  index.h  level.cpp  level.cppm  level.h  particles.cpp  particles.cppm  particles.h  player.cpp  player.cppm  player.h  projectiles.cpp  projectiles.cppm  projectiles.h  render.cpp  (+14 more)
src/tests-utils/: common.cppm  common.h
src/utils/: color.cpp  color.cppm  color.h  common.cpp  common.cppm  common.h  crash.cpp  crash.cppm  crash.h  data_holder.cpp  data_holder.cppm  data_holder.h  demangled_name.h  ecs.cpp  ecs.cppm  ecs.h  file_loaders.cpp  file_loaders.h  gl.cpp  gl.cppm  gl.h  index.h  interpolations.cppm  interpolations.h  json.h  mappers.h  mouse.cpp  mouse.cppm  mouse.h  noop.h  ostream.cppm  platform.cppm  random.cppm  random.h  result.cppm  result.h  system.cpp  system.cppm  system.h  tvg.cpp  (+8 more)
src/web-shell/: global.d.ts  index.html  shell.ts  (+1 more)
(+117 files in other folders)
